# bulletproof-gadgets

./: .gitignore  Cargo.toml  Dockerfile  codeship-services.yml  codeship-steps.yml
.github/workflows/: build.yml  integration_tests.yml
custom_examples/: pass.gadgets  pass.inst  pass.json  pass.schema.json  pass.wtns  passport-example.gadgets  passport-example.inst  passport-example.schema.json  passport-example.wtns  passport.gadgets  passport.inst  passport.json  passport.wtns  test_hash.gadgets  test_hash.inst  test_hash.wtns  test_merkle.gadgets  test_merkle.inst  test_merkle.wtns  test_root.gadgets  test_root.json  user_story_s1.gadgets  user_story_s1.inst  user_story_s1.wtns
interfaces/android/: Cargo.toml  README.md
interfaces/android/src/: lib.rs
interfaces/ios/: Cargo.toml  README.md
interfaces/ios/src/: bulletproofs_ios.h  lib.rs
src/: android.rs  c_prover.rs  commitments.rs  conversions.rs  cs_buffer.rs  gadget.rs  lib.rs  prove.rs  prover.rs  verifier.rs  verify.rs
src/lalrpop/: assignment_parser.rs  ast.rs  c_assignment_parser.rs  gadget_grammar.lalrpop  mod.rs
src/merkle_root_hash/: MERKLE_ROOT_HASH.md  merkle_root.rs  merkle_root_hash_gadget.rs  mod.rs
src/mimc_hash/: mimc.rs
src/or/: or_conjunction.rs
tests/: combine_gadgets.rs  prover_verifier.rs
tests/resources/: merkle_root.gadgets  merkle_root.inst  merkle_root.wtns
tests/scripts/: test_prover_verifier.sh
