[package]
name = "bulletproofs_gadgets"
version = "0.1.0"
authors = ["Marc Kloter"]
build = "build.rs"

[dependencies]
curve25519-dalek = { version = "1", features = ["serde"] }
rand = "0.6"
merlin = "1.1.0"
pkcs7 = "1.0.0"
hex = "0.3.2"
regex = "1.1.9"
libmath = "0.2.1"
lalrpop-util = "0.17.1"
zeroize = "<=1.3.0"
# zeroize_derive = "<=1.1.0"  # 1.1.0 was yanked from the index, and 1.2.0 doesn't compile on Nightly 2020-08-20. We commit a working lockfile instead.
# packed_simd_2 = "<=0.3.5"  # pinned via cargo update

[dependencies.bulletproofs]
git = "https://github.com/MarcKloter/bulletproofs"
branch = "develop"
features = ["yoloproofs", "avx2_backend"]

[build-dependencies]
lalrpop = "0.17.1"

[[bin]]
name = "prover"
path = "src/bin/prover.rs"

[[bin]]
name = "verifier"
path = "src/bin/verifier.rs"

[[test]]
name = "combine_gadgets"